		that fail (but no actual address is supplied yet).
20081212	Moving the Dreamcast PowerVR2 DMA handling from
		dev_dreamcast_g2 to dev_pvr, where it belongs.
20081213	Continuing on SH4 and PowerVR2 DMA.
		Moving the unsupported guest OSes from guestoses.html to a
		new page, unsupported.html, for clarity.
		Continuing on the NCR 53C710 SCSI controller (dev_osiop.c).
20081217	Beginning on implementing the SCRIPTS instruction set for
		dev_osiop.
20081219	Continuing a little bit on the osiop SCRIPTS ISA.
20081221	Implementing an instruction combination for M88K idle loop
		detection (works with OpenBSD/mvme88k).
		Adding a dummy LUNA 88K machine mode (machine_luna88k.c).
20081229	Continuing on the osiop SCRIPTS ISA.
20081231	More progress on dev_osiop.c.
20090101	FINALLY the osiop works well enough to let OpenBSD detect
		SCSI devices! :-)
		After some more hacking, everything is finally stable enough
		to allow OpenBSD/mvme88k to be installed onto a disk image!
20090102	Optimizing the osiop SCSI device a bit; a default scripted
		install of OpenBSD/mvme88k has dropped from 30 minutes to 10.
		Fixing a bug which was caused by instructions like subu.co
		with a destination register of r0 being treated as nop.
		Various updates to make the source code build better on
		Linux (Ubuntu 8.10), and with GNU make.

==============  RELEASE 0.4.7  ==============

20090103	Implementing more M88K floating point instruction variants.
		Merging in some parts from the (old) experimental C++ branch:
		compiler detection (C++), po directory, Doxygen configuration,
		"make install" functionality, etc.
20090104	Attempting to reduce the "first-person"-ness of some parts of
		the documentation; adding a Thanks section to the intro.html
		page, where code contributions can be credited.
20090108	Continuing to merge in code from the C++ branch; more of the
		main GXemul class and the unit test framework have been
		incorporated now.
		Moving RELEASE.html to doc/.